Fixed time tracking issue

--- a/app/views/time_entries/_current.html.haml
+++ b/app/views/time_entries/_current.html.haml
@@ -1,7 +1,7 @@
 .clearfix
   - if @time_entry
     .fr.clock
-      %strong= format_as_time(@time_entry.length)
+      %strong= format_as_time(@time_entry.total_length)
       - if @time_entry.is_running?
         %a.toggle.pause{:href => pause_time_entry_path(@time_entry, :cache => Time.now.to_i)} Pause
       - else
