--- a/app/views/stories/_story.html.haml
+++ b/app/views/stories/_story.html.haml
@@ -5,6 +5,8 @@
       %a{:href => "#"} Delete
     .name
       = story.name
+      - if story.owner
+        == (#{story.owner.name})
     .details.clearfix
       - if story.estimate && story.estimate != -1
         %span.fl.points= story.estimate
