--- a/app/views/accounts/_form.html.haml
+++ b/app/views/accounts/_form.html.haml
@@ -7,6 +7,7 @@
     
     - f.inputs "Settings" do
       = f.input :email
+      = f.input :name
       = f.input :password, :as => :password
       = f.input :password_confirmation, :as => :password
       = f.input :current_password, :as => :password
