--- a/app/views/stories/_form.html.haml
+++ b/app/views/stories/_form.html.haml
@@ -5,5 +5,6 @@
     = f.input :current_state, :as => :select, :collection => Story::STATES
     = f.input :description, :as => :text
     = f.input :estimate
+    = f.input :owner_id, :collection => User.all
 
   = f.buttons
