--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -245,6 +245,8 @@ ul.stories li.chore .name { background-position: 10px -52px; }
 
 ul.stories li.bug .name { background-position: 10px -115px; }
 
+ul.stories li .name a.owner { font-size: 11px; padding-left: 5px; }
+
 /* Selected */
 
 ul.stories .icon { padding-right: 10px; padding-top: 3px; }
@@ -252,6 +254,8 @@ ul.stories .icon { padding-right: 10px; padding-top: 3px; }
 /* Details */
 
 ul.stories li .details { position: absolute; bottom: 11px; right: 0px; color: #7e7e7e; font-size: 11px; font-weight: bold; text-shadow: #fff 0 1px 0; }
+
+ul.stories li .details span { padding-right: 10px; }
 
 ul.stories li .details .points { padding-right: 10px; padding-left: 15px; background: url(../images/story_icons_small.png) no-repeat 0 2px; }
 
