[Finished: #4975620] Fellow views iteration goal progress for projects

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
   %body{:class => params[:controller]}
     #wrapper
       #header
-        %h1.logo= link_to 'Headwater', projects_path
+        %h1.logo= link_to 'Headwater', dashboard_path
         = render :partial => "layouts/user_status"
         #status
           .content.clearfix
