--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -5,6 +5,7 @@
     - f.inputs do
       = f.input :_remote_id
       = f.input :name
+      = f.input :hours_per_week
     
     - f.inputs :harvest do
       = f.input :harvest_project_id
