--- a/app/views/dashboards/show.html.haml
+++ b/app/views/dashboards/show.html.haml
@@ -1,8 +1,15 @@
 .content
   - @projects.each do |project|
     .clearfix
-      %h2.fl= project.name
+      %h2.fl
+        = link_to project.name, project_path(project)
       .fr
+        - if project.hours_per_week
+          Hours goal:
+          = project.hours_per_week
+          %br
+          Hours spent:
+          = project.hours_this_week.round(2)
     %ul
       - project.stories.where(:state => 'current').each do |story|
         %li
