--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -295,7 +295,7 @@ ul.stories.edit_mode .delete_button a { display: block; background-image: url(..
 
 .story_inspector .buttons { margin-top: 8px; }
 
-.story_inspector label { color: #a0a6a9; font-weight: normal; font-style: normal; }
+.story_inspector label { color: #808587; font-weight: normal; font-style: normal; font-size: 12px; }
 
 .story_inspector .label { width: 70px; padding-top: 4px; }
 
@@ -368,6 +368,26 @@ ul.comments li { margin-bottom: 5px; color: #818283; text-shadow: #fff 0px 1px 0
 .story_inspector input.message { background-color: #f3f4f6; border: 1px solid #c0c8d3; padding: 5px; width: 100%; font: 11px "Monaco", "Courier New"; margin: 0; }
 
 .story_inspector input.message:focus { outline: none; }
+
+/* Form */
+
+#inspector div.row { margin-bottom: 0; }
+
+#inspector div.row.type { margin-top: 5px; margin-bottom: 5px; }
+
+/* Type select */
+
+.type_select { background-image: url(../images/story_type_picker.png); width: 126px; height: 24px; border: 1px solid #b3bbc2; -webkit-border-radius: 3px; }
+
+.type_select label { width: 42px; display: block; float: left; height: 24px; cursor: pointer; }
+
+.type_select label.checked.feature { background: url(../images/story_type_picker.png) 0 -24px; }
+
+.type_select label.checked.chore { background: url(../images/story_type_picker.png) -42px -24px; }
+
+.type_select label.checked.bug { background: url(../images/story_type_picker.png) -84px -24px; }
+
+.type_select label input { position: absolute; left: -9999px; }
 
 
 
@@ -448,7 +468,7 @@ form.formtastic label.estimate { padding-top: 4px; }
 
 form.formtastic div.estimate label { display: block; float: left; width: 20px; padding-top: 4px; padding-left: 5px; }
 
-form.formtastic div.estimate input { display: block; float: left; widows: 20px; }
+form.formtastic div.estimate input { display: block; float: left; width: 20px; }
 
 form.formtastic li.estimate { margin-bottom: 5px; }
 
