--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -528,6 +528,8 @@ ul.dashboard_stories li.none { text-align: center; color: #bec7d7; }
 
 .progress .progress_bar.progress_10 { width: 160px; }
 
+.content.user { background-color: #f5f5f5; }
+
 
 
 /* @end */
