--- a/app/views/layouts/_html_head.html.haml
+++ b/app/views/layouts/_html_head.html.haml
@@ -1,6 +1,6 @@
 %head
   %title Headwater β
   = stylesheet_link_tag "blueprint/screen", "application"
-  = javascript_include_tag "jquery.js", "jquery.ui.js", "jquery.address.js", "rails.js", "inscription.js"
+  = javascript_include_tag "jquery.js", "jquery.cookie.js", "jquery.ui.js", "jquery.address.js", "rails.js", "inscription.js"
   = javascript_include_tag "application.js", "dashboard.js", "stories.js", "time_tracker.js"
   = csrf_meta_tag
