--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -331,6 +331,12 @@ ul.stories.edit_mode .delete_button { display: block; position: absolute; right:
 
 ul.stories.edit_mode .delete_button a { display: block; background-image: url(../images/story_remove.png); text-indent: -9999px; width: 87px; height: 24px; }
 
+/* Tags */
+
+.story .tags { color: #eff3f7; text-shadow: none; margin-left: 10px; margin-top: 3px; font-weight: bold; font-size: 9px; }
+
+.story .tags .tag { background: #81868d url(../images/tag_icon.png) no-repeat 4px 3px; text-transform: uppercase; -webkit-border-radius: 2px; -moz-border-radius: 2px; padding: 2px 4px 2px 17px; }
+
 /* @group Inspector */
 
 .story_inspector {  }
